[package]
name = "clu-middleware-tron"
version = "0.1.0"
edition = "2024"
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
description = "Middleware for communication between Tron actors and RabbitMQ"
readme = "README.md"
license = "BSD-3-Clause"
homepage = "https://github.com/sdss/clu-middleware-tron"
repository = "https://github.com/sdss/clu-middleware-tron"

[lib]
crate-type = ["lib"]
bench = false

[dependencies]
async-channel = "2.5.0"
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["derive", "env"] }
clap-cargo = "0.18.3"
env_logger = "0.11.8"
futures-lite = "2.6.1"
lapin = "3.7.2"
log = "0.4.28"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
